--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angular-block-ui" version="0.2.2" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net46" />
   <package id="AngularJS.Route" version="1.6.5" targetFramework="net46" />
-  <package id="angular-loading-bar" version="0.9.0" targetFramework="net46" />
   <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
