--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -3,6 +3,7 @@
   <package id="angular-block-ui" version="0.2.2" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net46" />
   <package id="AngularJS.Route" version="1.6.5" targetFramework="net46" />
+  <package id="AngularJS-Toaster" version="2.0.0" targetFramework="net46" />
   <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
