--- a/BloodConnector.WebAPI/Web.Release.config
+++ b/BloodConnector.WebAPI/Web.Release.config
@@ -4,16 +4,15 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--
-    In the example below, the "SetAttributes" transform will change the value of
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
-    finds an attribute "name" that has a value of "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
+    In the below code the "SetAttributes" transform will change the attributes of any element 
+    that matches the "name(It can be any key)" attribute containing the value "DefaultConnection".
   -->
+  <connectionStrings>
+  <add name="DefaultConnection" 
+       connectionString="Data Source=SQL5021.Smarterasp.net;Database=DB_A1D815_BloodConnector;User ID=DB_A1D815_BloodConnector_admin;Password=arif1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient"
+       xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
