--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angular-block-ui" version="0.2.2" targetFramework="net46" />
+  <package id="angular-file-upload" version="12.2.13" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net46" />
   <package id="AngularJS.Route" version="1.6.5" targetFramework="net46" />
   <package id="AngularJS-Toaster" version="2.0.0" targetFramework="net46" />
