--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -343,6 +343,7 @@
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
     <Content Include="app\services\dataService.js" />
+    <Content Include="app\services\fileService.js" />
     <Content Include="app\services\usersService.js" />
     <Content Include="app\views\about.html" />
     <Content Include="app\views\forgot.html" />
